Visited color fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ body {
 }
 
 a:link { color: lightskyblue; }
-a:visited { color: #6d4b8d; }
+a:visited { color: #c499ec; }
 a:hover { color: #ffffff; }
 a:active { color: #ff4040; text-decoration:none; font-weight:normal; }
 
